passerelle.tf
# resource "azurerm_subnet" "frontend" {
#   name                 = "frontend"
#   resource_group_name  = local.resource_group_name
#   virtual_network_name = azurerm_virtual_network.VNet.name
#   address_prefixes     = [local.subnets"gateway"]
# }

# resource "azurerm_subnet" "backend" {
#   name                 = "backend"
#   resource_group_name  = local.resource_group_name
#   virtual_network_name = azurerm_virtual_network.VNet.name
#   address_prefixes     = ["10.1.0.0/24"]
# }

# resource "azurerm_public_ip" "example" {
#   name                = "example-pip"
#   resource_group_name = local.resource_group_name
#   location            = local.location
#   allocation_method   = "Dynamic"
# }

# # since these variables are re-used - a locals block makes this more maintainable
# locals {
#   backend_address_pool_name      = "${azurerm_subnet.Subnet.name}-beap"
#   frontend_port_name             = "${azurerm_subnet.Subnet.name}-feport"
#   frontend_ip_configuration_name = "${azurerm_subnet.Subnet.name}-feip"
#   http_setting_name              = "${azurerm_virtual_network.Vnet.name}-be-htst"
#   listener_name                  = "${azurerm_virtual_network.Vnet.name}-httplstn"
#   request_routing_rule_name      = "${azurerm_virtual_network.Vnet.name}-rqrt"
#   redirect_configuration_name    = "${azurerm_virtual_network.Vnet.name}-rdrcfg"
# }

# resource "azurerm_application_gateway" "network" {
#   name                = "appgateway"
#   resource_group_name = local.resource_group_name
#   location            = local.location

#   sku {
#     name     = "Standard_Small"
#     tier     = "Standard"
#     capacity = 2
#   }

#   gateway_ip_configuration {
#     name      = "my-gateway-ip-configuration"
#     subnet_id = azurerm_subnet.Subnet["sr1"].id
#     public_ip_address_id = azurerm_public_ip.Public_IP_Appli.id
#   }

#   frontend_port {
#     name = local.frontend_port_name
#     port = 80
#   }

#   frontend_ip_configuration {
#     name                 = local.frontend_ip_configuration_name
#     public_ip_address_id = azurerm_public_ip.Public_IP_Appli.id
#   }

#   backend_address_pool {
#     name = local.backend_address_pool_name
#   }

#   backend_http_settings {
#     name                  = local.http_setting_name
#     cookie_based_affinity = "Disabled"
#     path                  = "/path1/"
#     port                  = 80
#     protocol              = "Http"
#     request_timeout       = 60
#   }

#   http_listener {
#     name                           = local.listener_name
#     frontend_ip_configuration_name = local.frontend_ip_configuration_name
#     frontend_port_name             = local.frontend_port_name
#     protocol                       = "Http"
#   }

#   request_routing_rule {
#     name                       = local.request_routing_rule_name
#     rule_type                  = "Basic"
#     http_listener_name         = local.listener_name
#     backend_address_pool_name  = local.backend_address_pool_name
#     backend_http_settings_name = local.http_setting_name
#   }
# }
